--- a/src/pages/index/index.scss
+++ b/src/pages/index/index.scss
@@ -4,3 +4,8 @@
 @import "~taro-ui/dist/style/components/list.scss";
 @import "~taro-ui/dist/style/components/icon.scss";
 @import "~taro-ui/dist/style/components/card.scss";
+
+page {
+  width: 100%;
+  height: 100%;
+}
