--- a/src/component/Article/index.scss
+++ b/src/component/Article/index.scss
@@ -14,6 +14,7 @@
     position: relative;
     height: 80Px;
     width: 80Px;
+    margin-left: 8Px;
   }
   // 文章内容
   .article-content {
@@ -21,7 +22,7 @@
     margin-left: 10Px;
   }
   .article-title {
-    margin-top: 5Px;
+    margin-top: 12Px;
     font: 18Px/1 "STFangsong",Helvetica,Arial,"Microsoft Yahei","Hiragino Sans GB","Heiti SC","WenQuanYi Micro Hei",sans-serif;
     font-size: inherit;
     text-rendering: auto;
@@ -76,6 +77,7 @@
     position: relative;
     height: 80Px;
     width: 80Px;
+    margin-left: 8Px;
   }
   // 文章内容
   .article-content {
@@ -83,7 +85,7 @@
     margin-left: 10Px;
   }
   .article-title {
-    margin-top: 5Px;
+    margin-top: 12Px;
     font: 26Px/1 "STFangsong",Helvetica,Arial,"Microsoft Yahei","Hiragino Sans GB","Heiti SC","WenQuanYi Micro Hei",sans-serif;
     font-size: inherit;
     text-rendering: auto;
