--- a/src/pages/mine/index.scss
+++ b/src/pages/mine/index.scss
@@ -1,18 +1,56 @@
 @import "~taro-ui/dist/style/components/list.scss";
 @import "~taro-ui/dist/style/components/icon.scss";
-page {
-  width: 100%;
-  height: 100%;
-}
-.mine-index {
-  width: 100%;
-  height: 100%;
-  background-color: #F0F0F0;
+@media (max-width: 767Px) {
+  .at-list__item {
+    font-size: 16Px;
+    padding: 12Px 12Px;
+    line-height: 1.5;
+  }
+  .at-list__item .item-extra__icon-arrow {
+    font-size: 24px;
+  }
+  page {
+    width: 100%;
+    height: 100%;
+  }
+  .mine-index {
+    width: 100%;
+    height: 100%;
+    background-color: #F0F0F0;
+  }
+
+  .about-reader {
+    margin-top: 20Px;
+  }
+  .faq {
+    margin-top: 20Px;
+  }
 }
 
-.about-reader {
-  margin-top: 20Px;
+@media (min-width: 768Px) and (max-width: 1024Px) {
+  .at-list__item {
+    font-size: 18Px;
+    padding: 12Px 12Px;
+    line-height: 1.5;
+  }
+  .at-list__item .item-extra__icon-arrow {
+    font-size: 24px;
+  }
+  page {
+    width: 100%;
+    height: 100%;
+  }
+  .mine-index {
+    width: 100%;
+    height: 100%;
+    background-color: #F0F0F0;
+  }
+
+  .about-reader {
+    margin-top: 20Px;
+  }
+  .faq {
+    margin-top: 20Px;
+  }
 }
-.faq {
-  margin-top: 20Px;
-}
+
