--- a/src/pages/ChildPages/AboutPage/index.scss
+++ b/src/pages/ChildPages/AboutPage/index.scss
@@ -1,3 +1,5 @@
 //@import "../../../component/wxParse/wxParse.wxss";
 //@import "../../../component/html2wxml/html2wxml.wxss";
 //@import "../../../component/html2wxml/highlight-styles/darcula.wxss";
+@import "../../../wemark/wemark.wxss";
+@import "../../../wemark/prism.wxss";
