--- a/src/pages/ChildPages/AboutPage/index.scss
+++ b/src/pages/ChildPages/AboutPage/index.scss
@@ -3,3 +3,6 @@
 //@import "../../../component/html2wxml/highlight-styles/darcula.wxss";
 @import "../../../wemark/wemark.wxss";
 @import "../../../wemark/prism.wxss";
+.index {
+  margin: 0Px 25Px;
+}
