--- a/src/wemark/wemark.wxss
+++ b/src/wemark/wemark.wxss
@@ -1,50 +1,55 @@
 @import "prism.wxss";
 
 .wemark_wrapper{
-	margin:10px 0;
-	font-size:32rpx;
+	margin:5px 0;
+	font-size:30rpx;
 	line-height: 1.8em;
 }
 .wemark_block_h1{
 	font-size:40rpx;
 	text-align: center;
-	margin-bottom:1em;
+	margin-bottom: 0.5em;
 }
 .wemark_block_h2{
 	font-size:40rpx;
 	padding-bottom:.5em;
-	margin-top:1em;
-	margin-bottom:1em;
+	margin-top:0.5em;
+	margin-bottom:0.5em;
 	border-bottom:1px solid #f0f0f0;
+	font-weight: 600;
 }
 .wemark_block_h3{
 	font-size:36rpx;
-	margin-top: 1em;
-	margin-bottom: 1em;
+	margin-top:0.5em;
+	margin-bottom:0.5em;
+	font-weight: 600;
+	border-bottom:1px solid #f0f0f0;
 }
 .wemark_block_h4,
 .wemark_block_h5,
 .wemark_block_h6{
 	font-weight: bold;
-	margin-top: 1em;
-	margin-bottom: 1em;
+	margin-top:0.5em;
+	margin-bottom:0.5em;
 }
 .wemark_block_p{
-	margin-top:1em;
-	margin-bottom:1em;
+	margin-top:0.5em;
+	margin-bottom:0.5em;
 }
 .wemark_block_video{
-	margin-top:1em;
-	margin-bottom:1em;
+	margin-top:0.5em;
+	margin-bottom:0.5em;
 	width:100%;
 }
+
 .wemark_block_blockquote_p{
-	margin-top:1em;
-	margin-bottom:1em;
-	padding:10px 0 10px 1em;
-	font-size:28rpx;
-	background:#f0f0f0;
-	border-left:5px solid #e0e0e0;
+	margin-top:0.5em;
+	margin-bottom:0.5em;
+	padding:5px 0 5px 5px;
+	font-size:14px;
+	background:#ffffff;
+	color: #999;
+	border-left:5px solid #dfe2e5;
 }
 .wemark_block_ul_li_p::before{
 	content:'• ';
@@ -141,6 +146,6 @@
 }
 .wemark_inline_link{
 	display: inline;
-	color: blue;
+	color: #1abc9c;
 	word-wrap:break-word;
 }
