--- a/src/pages/index/index.scss
+++ b/src/pages/index/index.scss
@@ -59,3 +59,13 @@
 .load-more > .at-load-more__tip {
   font-size: 16px;
 }
+.at-loading .at-loading__ring {
+  margin-top: 2Px;
+  height: 20Px;
+  width: 20Px;
+}
+.at-activity-indicator__content {
+  font-size: 18Px;
+  padding-bottom: 8Px;
+}
+
